# intelliperf

./: .gitignore  CITATION.cff  README.md  accordo.todo  attentionlog.txt  gemm_output.txt  gemm_output_final.txt  gemmlog.txt  maestro.def  nohup.out  notes.txt  pyproject.toml  reducelog.txt  run.sh  run_all.sh  run_all_overload.sh  run_models_4kernels.sh  run_quick_tests.sh  test_lean_attn.json
.github/: CODEOWNERS  copilot-instructions.md
accordo/: CMakeLists.txt  rebuild.sh
accordo/src/: CMakeLists.txt  accordo.cpp  accordo.hpp  log.hpp
apptainer/: build.sh  intelliperf.def  maestro.def  run.sh  run_cmd.sh
containers/: build.sh  intelliperf.Dockerfile  intelliperf.def  run.sh
docker/: build.sh  intelliperf.Dockerfile  maestro.Dockerfile  run.sh
docs/: CONTRIBUTING.md  IntelliPerf.md  MAESTRO.md
examples/: CMakeLists.txt  README.md  bnk_conflict.cpp  conflict
examples/access_pattern/uncoalesced/: uncoalesced.hip
examples/bank_conflict/: CMakeLists.txt
examples/bank_conflict/b2b_matrix_transpose/: b2b_matrix_transpose.hip
examples/bank_conflict/llm.c/: requirements.txt
examples/bank_conflict/matrix_transpose/: Makefile  build.sh  matrix_transpose.hip
examples/bank_conflict/reduce/: Makefile  reduce.hip
examples/bank_conflict/synthetic/: Makefile  bnk_conflict.cpp  build.sh  synthetic.hip
examples/bank_conflict/transpose_scale_add/: build.sh  transpose_scale_add.hip
examples/bank_conflict/transpose_scale_add_templated/: build.sh  transpose_scale_add_templated.hip
examples/basic/: CMakeLists.txt
examples/basic/vector_add/: build.sh  vector_add.hip
examples/contention/: CMakeLists.txt
examples/contention/histogram/: histogram.hip
examples/contention/reduction/: build.sh  initial_code.hip  optimized_code.hip  reduction.hip
examples/contention/reduction_optimized/: reduction_optimized.hip
examples/contention/simple_reduction/: simple_reduction.hip
examples/python/: gemm.py
examples/scripts/: build_examples.sh
examples/torch/: add.py  gemm.py
examples/triton/: benchmark_kernels.py  gemm.py  gemm_runner.py  reduce.py  run_all_runners.sh
examples/triton/attention/: lean_attn.py  lean_attn.txt  lean_attn_final.txt  mha.txt  mha_final.txt  mha_log.txt  mha_unswizzle.py  runner_mha.py  test_lean_attn.py
examples/triton/autogen_10/: conv2d.py  conv2d_runner.py  fft.py  fused_attention.py  fused_elementwise.py  fused_elementwise_runner.py  gemm.py  gemm_runner.py  layer_norm.py  layer_norm_runner.py  softmax.py  softmax_runner.py  spmv.py  spmv_runner.py  stencil_2d.py  stencil_2d_runner.py  transpose.py  transpose_runner.py
examples/triton/autogen_10/swizzling_aware/: conv2d.txt  conv2d_log.txt  fused_elementwise.txt  fused_elementwise_final.txt  fused_elementwise_log.txt  gemm.txt  gemm_final.txt  gemm_log.txt  layer_norm.txt  layer_norm_final.txt  layer_norm_log.txt  softmax.txt  softmax_final.txt  softmax_log.txt  spmv.txt  spmv_final.txt  spmv_log.txt  stencil_2d.txt  stencil_2d_final.txt  stencil_2d_log.txt  transpose.txt  transpose_final.txt  transpose_log.txt
examples/triton/autogen_10/swizzling_logs_2/: conv2d_optimized.py  conv2d_performance.csv  fused_attention_optimized.py  fused_attention_performance.csv  fused_elementwise_log.txt  fused_elementwise_optimized.py  fused_elementwise_performance.csv  gemm_optimized.py  gemm_performance.csv  layer_norm_log.txt  layer_norm_optimized.py  layer_norm_performance.csv  softmax_log.txt  softmax_optimized.py  softmax_performance.csv  spmv_log.txt  spmv_optimized.py  spmv_performance.csv  stencil_2d_log.txt  stencil_2d_optimized.py  stencil_2d_performance.csv  transpose_log.txt
examples/triton/autogen_10/swizzling_overload/: conv2d.txt  fused_elementwise.txt  gemm.txt  layer_norm.txt  softmax.txt  spmv.txt  stencil_2d.txt  transpose.txt
examples/triton/autogen_10/swizzling_unaware/: conv2d.txt  conv2d_log.txt  fused_elementwise.txt  fused_elementwise_log.txt  gemm.txt  gemm_log.txt  layer_norm.txt  layer_norm_log.txt  softmax.txt  softmax_log.txt  spmv.txt  spmv_log.txt  stencil_2d.txt  stencil_2d_log.txt  transpose.txt  transpose_log.txt
examples/triton/autogen_science_10/: black_scholes.py  black_scholes_runner.py  fdtd_2d.py  fdtd_2d_runner.py  gravity_potential.py  gravity_potential_runner.py  ising_model.py  ising_model_runner.py  jacobi_3d.py  lbm_d2q9.py  molecular_dynamics.py  n_body.py  n_body_runner.py  pic_1d.py  smith_waterman.py  smith_waterman_runner.py
examples/triton/autogen_science_10/swizzling_aware/: black_scholes.txt  black_scholes_log.txt  fdtd_2d.txt  fdtd_2d_log.txt  gravity_potential.txt  gravity_potential_log.txt  ising_model_log.txt  n_body_log.txt  smith_waterman.txt  smith_waterman_final.txt  smith_waterman_log.txt
examples/triton/autogen_science_10/swizzling_logs_2/: fdtd_2d_log.txt  fdtd_2d_log_final.txt  ising_model_log.txt  ising_model_log_final.txt  lbm_d2q9_log.txt  lbm_d2q9_log_final.txt  pic_1d_log.txt  pic_1d_log_final.txt  smith_waterman_log.txt  smith_waterman_log_final.txt
examples/triton/autogen_science_10/swizzling_overload/: black_scholes.txt  fdtd_2d.txt  gravity_potential.txt  n_body.txt  smith_waterman.txt
examples/triton/autogen_science_10/swizzling_unaware/: black_scholes.txt  black_scholes_log.txt  fdtd_2d.txt  fdtd_2d_log.txt  gravity_potential.txt  gravity_potential_log.txt  ising_model_log.txt  n_body_log.txt  smith_waterman.txt  smith_waterman_log.txt
examples/triton/problem_size_sweep/: gemm_runner.py  gemm_swizzle.py  layer_norm_runner.py  layer_norm_swizzle.py  profile.sh  run_all_runners.sh  run_sweep.sh  smith_waterman_runner.py  smith_waterman_swizzle.py  softmax_runner.py  softmax_swizzle.py  stencil_2d_runner.py  stencil_2d_swizzle.py  stencil_2d_unswizzle.py
recover/: build  recovered_kernel_fixed  recovered_kernel_fixed.hip
scripts/: build_examples.sh  install_tool.py
src/: demo.py  initial_code.hip  maestro  optimized_code.hip
tests/: test_gpu_spec.py  test_llm_validation.py  test_matrix_transpose.sh  (+1 more)
tracer/src/: CMakeLists.txt  README.md  ipc_helper.hpp  log.cpp  log.hpp  tracer.cpp  tracer.hpp
(+143 files in other folders)
