[project]
name = "maestro"
version = "0.0.1"
description = "Automated bottleneck detection and solution orchestration"
authors = [
    { name = "Muhammad Awad", email = "muhaawad@amd.com" },
    { name = "Cole Ramos", email = "Cole.Ramos@amd.com" }
]

license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.8"

# Python dependencies 
dependencies = [
    "tomli",
    "openai>=1.0.0",
    "tabulate"
]


[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.rocprofiler-compute]
git = "git@github.com:ROCm/rocprofiler-compute.git"
branch = "41e73650d5cfc3dbd98e007d6279235578f8529a"
build_command = """
python3 -m pip install --ignore-installed blinker &&
python3 -m pip install -r requirements.txt
"""

[tool.guided-tuning]
git = "git@github.com:AMDResearch/guided-tuning.git"
branch = "629a237f90a8e1e7c21f4dabca14104cfb148614"
build_command = """
python3 -m pip install -r requirements.txt
"""


[tool.logduration]
git = "git@github.com:AMDResearch/logduration.git"
branch = "17da6f901f17a25747ddec988d391c70d34342d8"
build_command = """
export CC=${ROCM_PATH}/bin/hipcc
export CXX=${ROCM_PATH}/bin/hipcc
git submodule update --init --recursive
#TODO: search for a Triton LLVM.
if [ -d "/root/.triton/llvm/llvm-ubuntu-x64" ]; then
    export TRITON_LLVM_PATH="/root/.triton/llvm/llvm-ubuntu-x64"
else
    export TRITON_LLVM_PATH="${ROCM_PATH}/llvm/"
fi
cmake -DCMAKE_PREFIX_PATH=${ROCM_PATH} \
      -DCMAKE_BUILD_TYPE=Release \
      -DCMAKE_INSTALL_PREFIX=install \
      -DCMAKE_VERBOSE_MAKEFILE=ON -S . -B build &&
cmake --build build --parallel 1 &&
cmake --install build
"""


[tool.nexus]
git = "git@github.com:AMDResearch/nexus.git"
branch = "main"
build_command = """
export CC=${ROCM_PATH}/bin/hipcc
export CXX=${ROCM_PATH}/bin/hipcc
cmake -B build -DCMAKE_PREFIX_PATH=/opt/rocm\
    -DLLVM_INSTALL_DIR=/opt/rocm/llvm\
    -DCMAKE_BUILD_TYPE=Debug
cmake --build build --parallel 16
"""
